<resources>
    <string name="app_name">Diet_application</string>
    <string name="app_name_ru">Рацион питания</string>
    <string name="title_home">Расписание</string>
    <string name="title_cart">Корзина</string>
    <string name="title_products">Склад</string>
    <string name="title_profile">Профиль</string>


    <string name="login">Логин</string>
    <string name="password">Пароль</string>

    <string name="button_create">СОЗДАТЬ</string>
    <string name="title_sign_up">Создание аккаунта</string>
    <string name="title_login_password">Придумайте логин и пароль:</string>
    <string name="title_form">Заполните анкету:</string>
    <string name="gender_men">Мужчина</string>
    <string name="gender_fem">Женщина</string>
    <string name="age">Возраст</string>
    <string name="weight">Вес (в кг)</string>
    <string name="height">Рост (в см)</string>
    <string name="physicalActivityRatio">КФА</string>
    <string name="check_if_exercises">Добавить в расписание упражнения?</string>

    <string name="title_sign_in_hint">Войдите в аккаунт, чтобы продолжить.</string>
    <string name="button_sign_in">ВОЙТИ</string>
    <string name="button_exit">ВЫЙТИ</string>
    <string name="create_hint">Нет аккаунта? Перейти на </string>


    <string name="product_name">Введите название</string>
    <string name="expiration_date">Введите дату срока годности (ДД/ММ/ГГГГ)</string>
    <string name="description">Введите заметки (при необходимости)</string>
    <string name="save">СОХРАНИТЬ</string>

    <string name="expiration_date_hint">Годен до: </string>

    <string name="exercises_hint">Общие сведения тренировки:</string>
    <string name="exercises_hint1">1. Выполните суставную разминку перед выполнением блока упражнений.</string>
    <string name="exercises_hint2">2. Упражнения -Растяжки- выполняются в два круга без отдыха.</string>
    <string name="exercises_hint3">3. Упражнения -Кардио- выполняются в три круга: отдых между упражнениями 15 секунд, отдых между кругами 2 минуты.</string>
    <string name="exercises_hint4">4. Упражнения -Силовые- выполняются в четыре круга: отдых между упражнениями 30 секунд, отдых между кругами 1 минута.</string>
    <string name="exercises_hint5">5. Упражнения -Ходьба- и -Бег- выполняются вне круговых повторений. Является желательным выполнение этих упражнений больше указанного времени.</string>

    <string name="kfa_hint">Сведения о КФА:</string>
    <string name="kfa_hint1">Тренировок нет ---- <b>1.2</b></string>
    <string name="kfa_hint2">Легкие (занятия физической работой 1-3 раза в неделю) ---- <b>1.375</b></string>
    <string name="kfa_hint3">Умеренные (3-5 раз в неделю) ---- <b>1.55</b></string>
    <string name="kfa_hint4">Тяжелые (6-7 дней в неделю) ---- <b>1.725</b></string>
    <string name="kfa_hint5">Очень тяжелые (несколько раз в день, 6-7 дней в неделю) ---- <b>1.9</b></string>

    <string name="update">Редактирование параметров</string>
</resources>