<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.sign_in.SignUpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/createAccountLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/backBtn"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:background="@drawable/ic_left_arrow" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                android:gravity="center"
                android:text="@string/update"
                android:textColor="@color/green_dark"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:padding="15dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top"
                android:background="@drawable/rounded_corners"
                android:gravity="center">

                <EditText
                    android:id="@+id/age"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:background="@android:color/transparent"
                    android:hint="@string/age"
                    android:inputType="number"
                    android:maxLines="1"
                    android:textSize="@dimen/text_size_for_edit_text" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top"
                android:background="@drawable/rounded_corners"
                android:gravity="center">

                <EditText
                    android:id="@+id/weight"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:background="@android:color/transparent"
                    android:hint="@string/weight"
                    android:maxLines="1"
                    android:textSize="@dimen/text_size_for_edit_text" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top"
                android:background="@drawable/rounded_corners"
                android:gravity="center">

                <EditText
                    android:id="@+id/height"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:background="@android:color/transparent"
                    android:hint="@string/height"
                    android:maxLines="1"
                    android:textSize="@dimen/text_size_for_edit_text" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top"
                android:background="@drawable/rounded_corners"
                android:gravity="center">

                <EditText
                    android:id="@+id/physicalActivityRatio"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:background="@android:color/transparent"
                    android:hint="@string/physicalActivityRatio"
                    android:maxLines="1"
                    android:textSize="@dimen/text_size_for_edit_text" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/kfa_hint" />

                <ImageView
                    android:id="@+id/visibility"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:background="@drawable/ic_left_arrow"
                    android:rotation="-90" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/kfa_hint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/kfa_hint1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/kfa_hint2" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/kfa_hint3" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/kfa_hint4" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/kfa_hint5" />

            </LinearLayout>

            <CheckBox
                android:id="@+id/check_if_exercises"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top"
                android:layout_marginBottom="5dp"
                android:text="@string/check_if_exercises"
                android:textSize="@dimen/text_size_for_edit_text" />

            <Button
                android:id="@+id/button_update"
                android:layout_width="match_parent"
                android:layout_height="60sp"
                android:layout_marginTop="@dimen/margin_top"
                android:backgroundTint="@color/green"
                android:text="@string/save"
                android:textSize="@dimen/button_text_size"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>