<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ui.sign_in.SignInActivity"
    android:background="@drawable/back">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_corners_sign_in"
        android:orientation="vertical"
        android:padding="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name_ru"
                android:textColor="@color/green_dark"
                android:textSize="28sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_sign_in_hint"
                android:textColor="@color/grey_hint"
                android:textSize="15sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@drawable/rounded_corners"
            android:gravity="center">

            <EditText
                android:id="@+id/login"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:height="50dp"
                android:background="@android:color/transparent"
                android:backgroundTint="@null"
                android:hint="@string/login"
                android:maxLines="1"
                android:textSize="@dimen/text_size_for_edit_text" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/rounded_corners"
            android:gravity="center">

            <EditText
                android:id="@+id/password"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:background="@android:color/transparent"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textSize="@dimen/text_size_for_edit_text" />

        </LinearLayout>

        <Button
            android:id="@+id/loginBtn"
            android:layout_width="320dp"
            android:layout_height="60sp"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/green"
            android:text="@string/button_sign_in"
            android:textSize="@dimen/button_text_size"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal"
            android:gravity="center">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_hint" />

            <TextView
                android:id="@+id/signUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:text="@string/title_sign_up"
                android:textColor="@color/green"
                android:textStyle="bold" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>
